# Locers

./: .gitignore  LICENSE  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
docs/: storage-policy.md
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: command_runner.rs  db.rs  error.rs  formula_catalog_snapshot.json  homebrew.rs  lib.rs  main.rs  models.rs  system_probe.rs
src/api/: client.ts  types.ts
src/state/: uiStore.ts
src/test/: setup.ts
src/ui/: App.test.tsx  App.tsx  format.ts  i18n.ts  status.tsx
